--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.69"
-arrow = "34.0.0"
+arrow = {version="34.0.0", features=["pyarrow"]}
 fake = {version="2.5.0", features=["derive","uuid"]}
 parquet = "34.0.0"
 pyo3 = "0.18.1"
 rand = "0.8.5"
+rayon = "1.7.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.94"
