--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ classifiers = [
 
 dependencies = [
     "pyarrow == 11.0.0",
-    "faker == 17.6.0"
+    "faker == 17.6.0",
+    "pandas == 2.0.0rc1",
 ]
 
 [tool.maturin]
